--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
             <version>5.9.3</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>20</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
