--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,24 @@
             <artifactId>javafx-fxml</artifactId>
             <version>20</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.6.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>5.6.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.6.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -38,7 +56,7 @@
                 <version>3.13.0</version>
                 <configuration>
                     <source>1.8</source> <!-- Imposta la tua versione Java -->
-                    <target>17</target>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
             <plugin>
